--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Beam::Emitter - Role for event emitting classes
 
 VERSION
-    version 0.007
+    version 0.008
 
 SYNOPSIS
         package My::Emitter;
@@ -114,6 +114,7 @@ DESCRIPTION
 
         package Door;
         use Moo;
+        use Door::Knock; # Our emitter must load the class, Beam::Emitter will not
         with 'Beam::Emitter';
 
         sub open {
@@ -197,6 +198,9 @@ SEE ALSO
 
 AUTHOR
     Doug Bell <preaction@cpan.org>
+
+CONTRIBUTOR
+    Joel Berger <joel.a.berger@gmail.com>
 
 COPYRIGHT AND LICENSE
     This software is copyright (c) 2015 by Doug Bell.
