make emitter role less polluting of consumers
Previously, when composing the Beam::Emitter role, the consumer would
get a lot of junk in their namespace, including Scalar::Util, Carp, and
Types::Standard. These things could then be called as methods on the
resulting object, which is likely not what the consuming class signed up
for.

By moving where the Moo::Role import occurs, we clean up our namespace,
which cleans up the namespaces of everyone consuming us. This could be
a problem if people are relying on this pollution, so we'll have to warn
people in the changelog

Fixes #13

--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,16 @@ Changelog for Beam-Emitter
       generally-desired enough to be part of the main distribution
       always. Thanks @yanick for the help! (Github #12)
 
+    [Fixed]
+
+    - The Beam::Emitter role no longer pollutes the consumer's namespace
+      with things from Types::Standard, Scalar::Util, and Carp. Thanks
+      @kentnl! (Github #13)
+
+      This could result in problems if you accidentally depended on this
+      behavior. To fix these problems, please import the correct subs
+      explicitly.
+
 1.003     2016-11-11 21:35:53-06:00 America/Chicago
 
     [Fixed]
